/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.namespace.proto;

option java_package = "com.dremio.service.namespace.proto";
option optimize_for = SPEED;

option java_outer_classname = "CommonProtobuf";

message TimePeriod {
  required int64 duration = 1;
  required TimeUnit unit = 2;

  enum TimeUnit {
    SECONDS = 1;
    MINUTES = 2;
    HOURS = 3;
    DAYS = 4;
    WEEKS = 5;
    MONTHS = 6;
  }
}

message EntityId {
  required string id = 1;
}
